# simple-email-notifier

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
email_notify_service/: main.py
email_notify_service/adapter/rabbitmq/: configure.py  rmq_constants.py
email_notify_service/core/: settings.py
email_notify_service/domain/: constants.py
email_notify_service/domain/schemas/: email_schema.py  email_subject.py
email_notify_service/domain/services/: email_service.py
email_notify_service/domain/templates/: activation.html
