[tool.poetry]
name = "simple-email-notifier"
version = "0.1.0"
description = "simple email service for users app"
authors = ["zus666 <t4g1.86@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
aiosmtplib = "^3.0.1"
jinja2 = "^3.1.3"
aio-pika = "^9.4.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
exclude = [".venv", "app/migrations/env.py"]
preview = true
show-fixes = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-local-folder = ["core", "domain", "adapters"]

combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint]
ignore-init-module-imports = true
ignore = ["TRY003", "ANN101", "EM", "FBT", "D100", "D104", "D200", "D205", "D1"]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true